--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,15 @@ name = "secretsweeper"
 version = "0.1.0"
 description = "Fast in memory secrets sanitizing C-Python module."
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = []
 
 [dependency-groups]
 dev = [
+    "faker>=37.8.0",
     "poetry>=2.1.4",
     "pytest>=8.4.2",
-    "ruff>=0.12.12",
+    "ruff>=0.13.2",
     "ziggy-pydust>=0.25.1",
 ]
 
@@ -28,7 +29,9 @@ script = "build.py"
 requires = ["poetry-core", "ziggy-pydust==0.25.1"]
 build-backend = "poetry.core.masonry.api"
 
-
 [[tool.pydust.ext_module]]
 name = "secretsweeper._core"
 root = "src/core.zig"
+
+[tool.ruff]
+select = ["ANN"]  # enable typing-related rules
