--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "secretsweeper"
-version = "0.1.0"
+version = "0.0.1a1"
 requires-python = ">=3.11"
 
 [build-system]
@@ -9,7 +9,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "secretsweeper"
-version = "0.1.0"
+version = "0.0.1a1"
 description = "Fast, in-memory secret-sanitizing CPython module written in Zig, designed for speed."
 authors = ["Vitaliy Demidov <notifications.recipient@gmail.com>"]
 readme = "README.md"
