--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -38,7 +38,10 @@ jobs:
         if: ${{ matrix.architectures[1] == 'manylinux' }}
         uses: pypa/cibuildwheel@v3.3.0
         env:
-          CIBW_BEFORE_BUILD: pip install poetry && poetry install
+          CIBW_BEFORE_BUILD: |
+            pip install poetry && \
+            ln -sf `python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])'` pydust && \
+            poetry install
           CIBW_BUILD: ${{ matrix.python }}-${{ matrix.architectures[1] }}*
           CIBW_SKIP: "*-musllinux*"
           CIBW_ARCHS_LINUX: ${{ matrix.architectures[2] }}
@@ -47,7 +50,10 @@ jobs:
         if: ${{ matrix.architectures[1] == 'macosx' }}
         uses: pypa/cibuildwheel@v3.3.0
         env:
-          CIBW_BEFORE_BUILD: pip install poetry && poetry install
+          CIBW_BEFORE_BUILD: |
+            pip install poetry && \
+            ln -sf `python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])'` pydust && \
+            poetry install
           CIBW_BUILD: ${{ matrix.python }}-${{ matrix.architectures[1] }}*
           CIBW_SKIP: "*-musllinux*"
           CIBW_ARCHS_MACOS: ${{ matrix.architectures[2] }}
