--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -38,10 +38,7 @@ jobs:
         if: ${{ matrix.architectures[1] == 'manylinux' }}
         uses: pypa/cibuildwheel@v3.3.0
         env:
-          CIBW_BEFORE_BUILD: |
-            pip install poetry && \
-            ln -sf `python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])'`/pydust pydust && \
-            poetry install
+          CIBW_BEFORE_BUILD: sh pre-build.sh
           CIBW_BUILD: ${{ matrix.python }}-${{ matrix.architectures[1] }}*
           CIBW_SKIP: "*-musllinux*"
           CIBW_ARCHS_LINUX: ${{ matrix.architectures[2] }}
@@ -50,10 +47,7 @@ jobs:
         if: ${{ matrix.architectures[1] == 'macosx' }}
         uses: pypa/cibuildwheel@v3.3.0
         env:
-          CIBW_BEFORE_BUILD: |
-            pip install poetry && \
-            ln -sf `python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])'`/pydust pydust && \
-            poetry install
+          CIBW_BEFORE_BUILD: sh pre-build.sh
           CIBW_BUILD: ${{ matrix.python }}-${{ matrix.architectures[1] }}*
           CIBW_SKIP: "*-musllinux*"
           CIBW_ARCHS_MACOS: ${{ matrix.architectures[2] }}
