--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -10,51 +10,34 @@ on:
 
 jobs:
   build-wheels:
-    name: Build wheel for ${{ matrix.python }}-${{ matrix.architectures[1] }}-${{ matrix.architectures[2] }}
+    name: Build wheel for ${{ matrix.python }}-${{ matrix.os }}
     runs-on: ${{ matrix.architectures[0] }}
     strategy:
       fail-fast: false
       matrix:
-        architectures:
-          - [ubuntu-latest, manylinux, "x86_64 aarch64"]
-#           - [macos-15, macosx, x86_64]
-#           - [macos-26, macosx, arm64]
 #         python: ["cp311", "cp312", "cp313", "cp314"]
         python: ["cp313"]
+#         os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, windows-11-arm, macos-15-intel, macos-14]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v1
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v3.3.1
+        env:
+          CIBW_BEFORE_BUILD: ./pre-build.sh
         with:
-          platforms: all
-
-      - name: Build wheels on linux
-        if: ${{ matrix.architectures[1] == 'manylinux' }}
-        uses: pypa/cibuildwheel@v3.3.0
-        env:
-          CIBW_BEFORE_BUILD: ./pre-build.sh
-          CIBW_BUILD: ${{ matrix.python }}-${{ matrix.architectures[1] }}*
-          CIBW_SKIP: "*-musllinux*"
-          CIBW_ARCHS_LINUX: ${{ matrix.architectures[2] }}
-
-      - name: Build wheels on macos
-        if: ${{ matrix.architectures[1] == 'macosx' }}
-        uses: pypa/cibuildwheel@v3.3.0
-        env:
-          CIBW_BEFORE_BUILD: ./pre-build.sh
-          CIBW_BUILD: ${{ matrix.python }}-${{ matrix.architectures[1] }}*
-          CIBW_SKIP: "*-musllinux*"
-          CIBW_ARCHS_MACOS: ${{ matrix.architectures[2] }}
+          package-dir: .
+          output-dir: wheelhouse
+          config-file: "{package}/pyproject.toml"
 
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.python }}-${{ matrix.architectures[1] }}-${{ matrix.architectures[2] }}
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
 
 
