--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build-wheels:
     name: Build wheel for ${{ matrix.python }}-${{ matrix.os }}
-    runs-on: ${{ matrix.architectures[0] }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
