--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 permissions:
   actions: read
@@ -46,6 +46,11 @@ jobs:
 
       - name: Poetry Install
         run: poetry install -n -v
+      - name: Create a symlink to the pydust lib
+        run: |
+            PYDUST_PATH=`python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])'`/pydust
+            ln -sf $PYDUST_PATH ./pydust
+            ls -al ./pydust
       - name: Poetry Build
         run: poetry build -v
 
