--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
             PYDUST_PATH=`python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])'`/pydust
             ln -sf $PYDUST_PATH ./pydust
-            ls -al ./pydust
+            ls -al ./pydust/src/ffi.h
 
       - name: Poetry Install
         run: poetry install -n -v
