--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           path: ~/.local
           key: poetry-${{ runner.os }}-${{ env.POETRY_VERSION  }}-${{ steps.setup-python.outputs.python-version }}
+
       - name: Install Poetry
         id: install-poetry
         if: steps.cached-poetry.outputs.cache-hit != 'true'
@@ -35,8 +36,10 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
+
       - name: Poetry git plugin
         run: poetry self add poetry-git-version-plugin
+
       - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
@@ -52,16 +55,21 @@ jobs:
             ls -al ./pydust/src/ffi.h
 
       - name: Poetry Install
-        run: poetry install -n -v
+        run: poetry install -n -vv
 
       - name: Poetry Build
         run: poetry build -v
 
       - name: Ruff
         run: poetry run ruff check .
+
       - name: Ruff format
-        run: poetry run ruff format --check .
+        uses: astral-sh/ruff-action@v3
+        with:
+          args: format --check .
+
       - name: Pytest
         run: poetry run pytest
+
       - name: Check stubs
         run: poetry run python -m ziglang build generate-stubs -Dcheck-stubs=true
