--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
           args: format --check .
 
       - name: Pytest
-        run: poetry run pytest
+        run: pytest test
 
       - name: Check stubs
         run: poetry run python -m ziglang build generate-stubs -Dcheck-stubs=true
