--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,5 +78,5 @@ jobs:
 
       - name: Check stubs
         run: |
-            pin install ziglang==0.15.1
+            pip install ziglang==0.15.1
             poetry run python -m ziglang build generate-stubs -Dcheck-stubs=true
