--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: action/checkout@v6
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
