--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,9 @@ jobs:
           version: "0.8.22"
 
       - name: Set up Python ${{ matrix.python-version }}
-        run: uv python install ${{ matrix.python-version }}
+        run: |
+            uv python install ${{ matrix.python-version }}
+            source $HOME/.local/bin/env
 
       - name: Install dependencies
         run: uv sync --no-install-project
