--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,16 +36,12 @@ jobs:
         run: uv sync --no-install-project
 
       - name: debug
-        run: |
-            find .venv -type f -name ffi.h
-            python -c 'import sysconfig; print(sysconfig.get_paths())'
+        run: python -c 'import sysconfig; print(sysconfig.get_paths())'
 
       - name: Create a symlink to the pydust lib
         run: |
-            SITE_PACKAGES_PATH=`python -c 'import sysconfig; print(sysconfig.get_paths()["purelib"])'`
-            echo "SITE_PACKAGES_PATH=$SITE_PACKAGES_PATH"
-            ls -al $SITE_PACKAGES_PATH
-            ln -sf $SITE_PACKAGES_PATH/pydust ./pydust
+            find .venv -type f -name ffi.h
+            ln -sf .venv/lib/python${{ matrix.python-version }}/site-packages/pydust ./pydust
             ls -al ./pydust/src/ffi.h
 
       - name: Poetry Build
