--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,12 +53,14 @@ jobs:
             ls -al ./dist
 
       - name: Ruff check
-        uses: astral-sh/ruff-action@v3
+        run: ruff check .
+#         uses: astral-sh/ruff-action@v3
 
       - name: Ruff format
-        uses: astral-sh/ruff-action@v3
-        with:
-          args: format --check .
+        run: ruff format --check .
+#         uses: astral-sh/ruff-action@v3
+#         with:
+#           args: format --check .
 
       - name: Pytest
         run: pytest test
