check python versions.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   actions: read
@@ -12,8 +18,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version:
-#           - "3.11"
-#           - "3.12"
+          - "3.11"
+          - "3.12"
           - "3.13"
 
     runs-on: ${{ matrix.os }}
