--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,16 +16,22 @@ permissions:
 
 jobs:
   build:
+    runs-on: ${{ matrix.platform-architecture[0] }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        platform-architecture:
+          - [ubuntu-latest, manylinux, "x86_64"]
+          - [ubuntu-24.04-arm, manylinux, "aarch64"]
+          - [macos-15, macosx, x86_64]
+          - [macos-26, macosx, arm64]
+          - [windows-latest, win, amd64]
+          - [windows-11-arm, win, arm64]
         python-version:
           - "3.11"
           - "3.12"
           - "3.13"
-
-    runs-on: ${{ matrix.os }}
-
+          - "3.14"
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -64,16 +70,16 @@ jobs:
       - name: Pytest
         run: uv run pytest test
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels
-          path: ./dist/*.whl
-          if-no-files-found: error
-
       # We generate nice stubs manually.
       #- name: Check stubs
       #  run: uv run python -m ziglang build generate-stubs -Dcheck-stubs=true
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.python-version }}-${{ matrix.platform-architecture[1] }}-${{ matrix.platform-architecture[2] }}
+          path: ./dist/*.whl
+          if-no-files-found: error
 
   upload:
 #     if: startsWith(github.ref, 'refs/tags/')
