--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
           - [ubuntu-24.04-arm, manylinux, "aarch64"]
           - [macos-15, macosx, x86_64]
           - [macos-26, macosx, arm64]
-          - [windows-latest, win, amd64]
-          - [windows-11-arm, win, arm64]
+          #- [windows-latest, win, amd64]
+          #- [windows-11-arm, win, arm64]
         python-version:
           - "3.11"
           - "3.12"
@@ -50,6 +50,7 @@ jobs:
         run: uv sync --no-install-project
 
       - name: Create a symlink to the pydust lib
+        if: ${{ matrix.platform-architecture[1] != 'win' }}
         run: |
             python -c 'import sysconfig; print(sysconfig.get_paths())'
             find .venv -type f -name ffi.h
