Test upload / download artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          pattern: secretsweeper-*.whl
+          pattern: wheels-*
           merge-multiple: true
           path: dist
 
