--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
         platform-architecture:
           - [ubuntu-latest, manylinux, "x86_64"]
           - [ubuntu-24.04-arm, manylinux, "aarch64"]
-          - [macos-15, macosx, x86_64]
-          - [macos-26, macosx, arm64]
-          #- [windows-latest, win, amd64]
-          #- [windows-11-arm, win, arm64]
+          - [macos-15-intel, macosx, x86_64]
+          - [macos-14, macosx, arm64]
+          - [windows-latest, win, amd64]
+          - [windows-11-arm, win, arm64]
         python-version:
           - "3.11"
           - "3.12"
@@ -49,13 +49,21 @@ jobs:
       - name: Install dependencies
         run: uv sync --no-install-project
 
-      - name: Create a symlink to the pydust lib
+      - name: Create a symlink to the pydust library
         if: ${{ matrix.platform-architecture[1] != 'win' }}
         run: |
-            python -c 'import sysconfig; print(sysconfig.get_paths())'
+            python -c 'import sysconfig; print(sysconfig.get_paths()["platlib"])'
             find .venv -type f -name ffi.h
             ln -sf .venv/lib/python${{ matrix.python-version }}/site-packages/pydust ./pydust
             ls -al ./pydust/src/ffi.h
+
+      - name: Create a symlink to the pydust library (Windows)
+        if: runner.os == "Windows"
+        shell: cmd
+        run: |
+            for /f "delims=" %%i in ('python -c "import sysconfig; print(sysconfig.get_paths()[\"platlib\"]) "') do set PLATLIB=%%i
+            mklink /D pydust "%PLATLIB%\pydust"
+            dir pydust
 
       - name: Poetry Build
         run: |
