--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
           - [ubuntu-24.04-arm, manylinux, "aarch64"]
           - [macos-15-intel, macosx, x86_64]
           - [macos-14, macosx, arm64]
-          - [windows-latest, win, amd64]
-          - [windows-11-arm, win, arm64]
+#           - [windows-latest, win, amd64]
+#           - [windows-11-arm, win, arm64]
         python-version:
           - "3.11"
           - "3.12"
