--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,17 +21,17 @@ jobs:
       fail-fast: false
       matrix:
         platform-architecture:
-          - [ubuntu-latest, manylinux, "x86_64"]
-          - [ubuntu-24.04-arm, manylinux, "aarch64"]
-          - [macos-15-intel, macosx, x86_64]
-          - [macos-14, macosx, arm64]
-#           - [windows-latest, win, amd64]
-#           - [windows-11-arm, win, arm64]
+#           - [ubuntu-latest, manylinux, "x86_64"]
+#           - [ubuntu-24.04-arm, manylinux, "aarch64"]
+#           - [macos-15-intel, macosx, x86_64]
+#           - [macos-14, macosx, arm64]
+          - [windows-latest, win, amd64]
+          - [windows-11-arm, win, arm64]
         python-version:
           - "3.11"
-          - "3.12"
-          - "3.13"
-          - "3.14"
+#           - "3.12"
+#           - "3.13"
+#           - "3.14"
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -64,7 +64,6 @@ jobs:
             call .venv\Scripts\activate
             for /f "delims=" %%i in ('python -c "import sysconfig; print(sysconfig.get_paths()[\"platlib\"]) "') do set PLATLIB=%%i
             echo Using platlib: %PLATLIB%
-            dir "%PLATLIB%"
 
             mklink /D pydust "%PLATLIB%\pydust"
             dir pydust
