--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,86 +16,48 @@ permissions:
 
 jobs:
   build:
-    runs-on: ${{ matrix.platform-architecture[0] }}
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        platform-architecture:
-          - [ubuntu-latest, manylinux, "x86_64"]
-          - [ubuntu-24.04-arm, manylinux, "aarch64"]
-          - [macos-15-intel, macosx, x86_64]
-          - [macos-14, macosx, arm64]
-#           - [windows-latest, win, amd64]
-#           - [windows-11-arm, win, arm64]
-        python-version:
-          - "3.11"
-          - "3.12"
-          - "3.13"
-          - "3.14"
+        os:
+          - ubuntu-latest
+          - ubuntu-24.04-arm
+          - macos-15-intel
+          - macos-14
+          - windows-latest
+          - windows-11-arm
     steps:
       - name: Checkout
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v7
+      - name: Set up QEMU
+        if: runner.os == 'Linux' && runner.arch == 'X64'
+        uses: docker/setup-qemu-action@v3
         with:
-          version: "0.8.22"
+          platforms: all
 
-      - name: Set up Python ${{ matrix.python-version }}
-        run: uv python install ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: uv sync --no-install-project
-
-      - name: Create a symlink to the pydust library
-        if: ${{ matrix.platform-architecture[1] != 'win' }}
-        run: |
-            python -c 'import sysconfig; print(sysconfig.get_paths()["platlib"])'
-            find .venv -type f -name ffi.h
-            ln -sf .venv/lib/python${{ matrix.python-version }}/site-packages/pydust ./pydust
-            ls -al ./pydust/src/ffi.h
-
-      - name: Create a symlink to the pydust library (Windows)
-        if: runner.os == 'Windows'
-        shell: cmd
-        run: |
-            call .venv\Scripts\activate
-            for /f "delims=" %%i in ('python -c "import sysconfig; print(sysconfig.get_paths()[\"platlib\"]) "') do set PLATLIB=%%i
-            echo Using platlib: %PLATLIB%
-            dir "%PLATLIB%"
-
-            mklink /D pydust "%PLATLIB%\pydust"
-            dir pydust
-
-      - name: Poetry Build
-        run: |
-            uv run poetry build -v
-            ls -al ./dist
-
-      - name: Ruff check
-        run: uv run ruff check .
-
-      - name: Ruff format
-        run: uv run ruff format --check .
-
-      - name: Pytest
-        run: uv run pytest test
-
-      # We generate nice stubs manually.
-      #- name: Check stubs
-      #  run: uv run python -m ziglang build generate-stubs -Dcheck-stubs=true
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v3.3.1
+        env:
+          CIBW_ARCHS_LINUX: ${{ runner.arch == 'X64' && 'auto ppc64le s390x armv7l riscv64' || 'auto' }}
+          CIBW_BUILD_FRONTEND: pip
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_TEST_COMMAND: "pytest test"
+          CIBW_SKIP: "cp3??t-*"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.python-version }}-${{ matrix.platform-architecture[1] }}-${{ matrix.platform-architecture[2] }}
-          path: ./dist/*.whl
+          name: wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./wheelhouse/*.whl
           if-no-files-found: error
 
   upload:
-    if: startsWith(github.ref, 'refs/tags/')
+#     if: startsWith(github.ref, 'refs/tags/')
     needs: [build]
     runs-on: ubuntu-latest
 
@@ -104,10 +66,10 @@ jobs:
         with:
           pattern: wheels-*
           merge-multiple: true
-          path: dist
+          path: wheelhouse
 
       - name: Display structure of downloaded files
-        run: ls -lh dist
+        run: ls -lh wheelhouse
 
 #       - uses: pypa/gh-action-pypi-publish@release/v1
 #         if: startsWith(github.ref, 'refs/tags/')
