--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - ubuntu-24.04-arm
-          - macos-15-intel
-          - macos-14
-          - windows-latest
-          - windows-11-arm
+#           - ubuntu-24.04-arm
+#           - macos-15-intel
+#           - macos-14
+#           - windows-latest
+#           - windows-11-arm
     steps:
       - name: Checkout
         uses: actions/checkout@v6
