--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.1a1"
 requires-python = ">=3.11"
 
 [build-system]
-requires = ["poetry-core", "ziggy-pydust==0.26.0"]
+requires = ["poetry-core==2.2.1", "ziggy-pydust==0.26.0", "pytest (>=8.4.2,<9.0.0)"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
