--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,8 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v3.3.1
         env:
-          CIBW_ARCHS_LINUX: ${{ runner.arch == 'X64' && 'auto ppc64le s390x armv7l riscv64' || 'auto' }}
+          CIBW_ARCHS_LINUX: ${{ runner.arch == 'X64' && 's390x armv7l riscv64' || 'auto' }}
+          # ppc64le - segmentation fault
           CIBW_BUILD_FRONTEND: pip
           CIBW_BUILD_VERBOSITY: 1
           CIBW_TEST_COMMAND: "pip install pytest && pytest /project/tests"
