--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-#           - ubuntu-24.04-arm
-#           - macos-15-intel
-#           - macos-14
+          - ubuntu-24.04-arm
+          - macos-15-intel
+          - macos-14
 #           - windows-latest
 #           - windows-11-arm
     steps:
@@ -34,22 +34,23 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up QEMU
-        if: runner.os == 'Linux' && runner.arch == 'X64'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
+#       - name: Set up QEMU
+#         if: runner.os == 'Linux' && runner.arch == 'X64'
+#         uses: docker/setup-qemu-action@v3
+#         with:
+#           platforms: all
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v3.3.1
         env:
-          CIBW_ARCHS_LINUX: ${{ runner.arch == 'X64' && 'riscv64' || 'auto' }}
-          # ppc64le - segmentation fault
-          # s390x - thread 176 panic: reached unreachable code
-          # armv7l - pydust error: pointer type child 'i64' cannot cast into pointer type child 'isize'
-          # i686 - thread 81 panic: integer overflow
+#           CIBW_ARCHS_LINUX: ${{ runner.arch == 'X64' && 'auto riscv64 ppc64le armv7l i686 s390x' || 'auto' }}
+#           # ppc64le - segmentation fault
+#           # s390x - thread 176 panic: reached unreachable code
+#           # armv7l - pydust error: pointer type child 'i64' cannot cast into pointer type child 'isize'
+#           # i686 - thread 81 panic: integer overflow
+#           # riscv64 - error
           CIBW_BUILD_FRONTEND: pip
-          CIBW_BUILD_VERBOSITY: 1
+#           CIBW_BUILD_VERBOSITY: 1
           CIBW_TEST_COMMAND: "pip install pytest && pytest /project/tests"
           CIBW_SKIP: "cp3??t-*"
 
