--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
-          - ubuntu-24.04-arm
+#           - ubuntu-latest
+#           - ubuntu-24.04-arm
           - macos-15-intel
           - macos-14
 #           - windows-latest
@@ -49,6 +49,8 @@ jobs:
 #           # armv7l - pydust error: pointer type child 'i64' cannot cast into pointer type child 'isize'
 #           # i686 - thread 81 panic: integer overflow
 #           # riscv64 - error
+          CIBW_ENVIRONMENT_MACOS: >
+            MACOSX_DEPLOYMENT_TARGET=${{ matrix.arch == 'x86_64' && '10.13' || '11.0' }}
           CIBW_BUILD_FRONTEND: pip
 #           CIBW_BUILD_VERBOSITY: 1
           CIBW_TEST_COMMAND: "pip install pytest && pytest /project/tests"
