cibuildwheel based build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=${{ runner.arch == 'X64' && '15.7' || '14.8' }}
           CIBW_BUILD_FRONTEND: pip
 #           CIBW_BUILD_VERBOSITY: 1
-          CIBW_TEST_COMMAND: "pip install pytest && pytest tests"
+          CIBW_TEST_COMMAND: "pip install pytest && pytest"
           CIBW_SKIP: "cp3??t-*"
           CIBW_TEST_SOURCE: tests
 
