--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+
       - name: Ruff format
         uses: astral-sh/ruff-action@v3
         with:
@@ -35,6 +39,7 @@ jobs:
 
   build:
     name: Build wheels on ${{ matrix.os }}
+    needs: [lint]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
