--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,13 @@ jobs:
       - name: Ruff format
         uses: astral-sh/ruff-action@v3
         with:
+          version: "0.13.3"
           args: "format --check ."
 
       - name: Ruff check
         uses: astral-sh/ruff-action@v3
         with:
+          version: "0.13.3"
           args: "check ."
 
   build:
