--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ permissions:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -72,7 +73,8 @@ jobs:
           if-no-files-found: error
 
   upload:
-#     if: startsWith(github.ref, 'refs/tags/')
+    name: Upload to PyPI
+    if: startsWith(github.ref, 'refs/tags/')
     needs: [build]
     runs-on: ubuntu-latest
 
@@ -86,9 +88,9 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -lh wheelhouse
 
-#       - uses: pypa/gh-action-pypi-publish@release/v1
-#         if: startsWith(github.ref, 'refs/tags/')
-#         with:
-#           skip-existing: true
-#           user: ${{ secrets.PYPI_USERNAME }}
-#           password: ${{ secrets.PYPI_PASSWORD }}
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          skip-existing: true
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_PASSWORD }}
