--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,39 @@ jobs:
           path: ./wheelhouse/*.whl
           if-no-files-found: error
 
+  build-sdist:
+    name: Build sdist
+    needs: [lint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          version: "0.8.22"
+
+      - name: Install dependencies
+        run: uv sync --no-install-project
+
+      - name: Build sdist package
+        run: uv run poetry build -f sdist && ls -al dist
+
+      - name: Upload sdist package
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-sdist
+          path: ./dist/*.tar.gz
+          if-no-files-found: error
+
   upload:
     name: Upload to PyPI
     if: startsWith(github.ref, 'refs/tags/')
