--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [project]
 name = "secretsweeper"
-version = "0.0.1a2"
+version = "0.0.1a1"
 requires-python = ">=3.11"
-license = "GPL-3.0-only"
+license = "MIT"
+license-files = ["LICENSE"]
 
 [build-system]
 requires = ["poetry-core==2.2.1", "ziggy-pydust==0.26.0"]
