--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
   upload:
     name: Upload to PyPI
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [build]
+    needs: [build, build-sdist]
     runs-on: ubuntu-latest
 
     steps:
